# music

./: .cache  .dockerignore  .gitignore  Dockerfile  README.md  application.yml  config.py  create_revision.sh  docker-compose.beta.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.shard.yml  docker-compose.yml  entrypoint.sh  main.py  mmain.py  notes.md  piccolo_conf.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22d38d4b87c4_modify_user_spotify_fields.py  273842e73717_initial.py  552612cc0faf_add_user_table.py  6669e1c709a5_add_spotify_fields_to_user.py  6f98c023675d_add_player_table.py  7c93553d9e92_add_stats.py  956abcb8f455_modify_user_spotify_fields.py  99bded196ef0_add_custom_playlists.py  b1af526da50c_add_spotify_fields_to_user.py  d1600c15aa9f_add_custom_playlists.py  f02c4db0ff19_init.py  fe54c46cdb5b_init.py
api/: Dockerfile  __main__.py  app.py  entrypoint.sh  pyproject.toml
api/routes/: spotify.py  topgg.py
api/templates/: linked.jinja2  success.jinja2
cogs/: config.py  connect.py  error.py  events.py  misc.py  music.py  music.py.7f421978fa0ff257e52f238245ca1dcb.tmp
cogs/extras/: checks.py  errors.py  playing_embed.py  playing_embed.py.f4baa0f4ab89b9e9a8a141b133b36ee2.tmp  types.py  views.py
gateway-proxy/: config.json  shard-test.config.json
keydb/: dump.rdb
lavalink/: Dockerfile  alpha.Dockerfile  alpha.nodes.yml  application.alpha.yml  application.beta.yml  application.yml  beta.Dockerfile  beta.nodes.yml  entrypoint.sh  prod.nodes.yml
lavalink/nodes/: base.yml  block.yml  external.yml
manager/: Dockerfile  entrypoint.py  manager.py  pyproject.toml
migrations/: vibr_2023_05_23t17_52_37_451219.py  vibr_2023_05_23t20_09_20_775387.py  vibr_2023_05_23t20_11_30_727595.py  vibr_2023_05_25t00_17_43_653423.py  vibr_2023_05_25t00_19_12_115423.py  vibr_2023_05_27t14_36_29_761135.py  vibr_2023_05_30t20_01_05_555391.py  vibr_2023_06_02t13_13_09_995954.py  vibr_2023_06_07t01_22_53_654151.py  vibr_2023_06_07t01_34_42_391410.py  vibr_2023_06_14t22_02_56_606323.py
server/: .dockerignore  Dockerfile  config.py  pyproject.toml  server.py
vibr/: Dockerfile  __main__.py  bot.py  buttons.py  checks.py  config.py  constants.py  database.py  embed.py  entrypoint.sh  errors.py  init.sql  inter.py  log.py  piccolo_app.py  player.py  pyproject.toml  requirements.txt  sharding.py  track_embed.py  utils.py  views.py
vibr/cogs/: config.py  error.py  events.py  ipc.py  management.py  misc.py  music.py  playlists.py  stats.py
vibr/cogs/extras/: checks.py  errors.py  hack.py  playing_embed.py  types.py  views.py
vibr/db/: __init__.py  node.py  notifications.py  player.py  playlists.py  song_logging.py  spotify_db.py  stats.py  user.py
vibr/exts/: auto_disconnect.py  error_handler.py  lyrics.py  management.py  metrics.py  misc.py  queue.py  spotify.py  topgg.py
vibr/exts/connecting/: _checks.py  _errors.py  disconnect.py  join.py
vibr/exts/filters/: _error.py  bass.py  clear_all.py  nightcore.py  rotate.py  speed.py
vibr/exts/liked/: _errors.py  _views.py  command.py
vibr/exts/loop/: command.py  loop.py  loop_queue.py  loop_track.py
vibr/exts/misc/: misc.py
vibr/exts/notifications/: _modals.py  _views.py  command.py  impl.py
vibr/exts/playback/: _errors.py  dnd.py  forward.py  grab.py  loop.py  pause.py  remove.py  resume.py  rewind.py  search.py  seek.py  skip.py  stop.py  volume.py
vibr/exts/playing/: _errors.py  lyrics.py  nowplaying.py  play.py  playnext.py  playnow.py  skip.py
vibr/exts/queu/: _errors.py  clear_queue.py
vibr/exts/queue/: _errors.py  _views.py  clear.py  command.py  impl.py  loop.py  move.py  now.py  remove.py  shuffle.py
vibr/exts/spotify/: _errors.py  _types.py  _views.py  command.py  spotify.py
vibr/exts/stats/: _view.py  collection.py  private.py  public.py
vibr/patches/nextcord/ui/: button.py
