[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ooliver1 <oliverwilkes2006@icloud.com>", "Arnavop <arnavkamramalout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.0"
nextcord-ext-ipc = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
