[tool.poetry]
name = "music"
version = "0.1.0"
description = "A music bot you can vibe with :)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = { version = "^2.4.0", extras = ["speed"] }
mafic = "^2.4.2"
uvloop = "^0.17.0"
ooliver-botbase = { git = "https://github.com/ooliver1/botbase", rev = "master", extras = [
    "db",
] }
taskipy = "^1.10.3"
pyyaml = "^6.0"
docker-py = "^1.10.6"
nextcord-ext-menus = "^1.5.6"
delarva = { git = "https://github.com/ooliver1/delarva" }
async-spotify = { git = "https://github.com/ooliver1/AsyncSpotify", subdirectory = "src" }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.261"

[tool.taskipy.tasks]
start = "python -m vibr"
format = "black vibr"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
