[tool.poetry]
name = "music"
version = "0.1.0"
description = "A music bot you can vibe with :)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = { git = "https://github.com/boting-devs/nextcord", rev = "vibr", extras = [
    "speed",
] }
mafic = "^2.9.2"
uvloop = "^0.17.0"
ooliver-botbase = { git = "https://github.com/ooliver1/botbase", rev = "master", extras = [
    "db",
] }
taskipy = "^1.10.3"
pyyaml = "^6.0"
nextcord-ext-menus = "^1.5.6"
delarva = { git = "https://github.com/ooliver1/delarva" }
async-spotify = { git = "https://github.com/ooliver1/AsyncSpotify", subdirectory = "src" }
docker = "^6.1.2"
asyncache = "^0.3.1"
cachetools = "^5.3.0"
humanfriendly = "^10.0"
redis = { version = "^4.5.5", extras = ["hiredis"] }
prometheus-async = "^22.2.0"
prometheus-client = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"

[tool.taskipy.tasks]
start = "python -m vibr"
format = "black vibr"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
